--- a/gatewayservice/package.json
+++ b/gatewayservice/package.json
@@ -9,14 +9,14 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/arquisoft/wiq_0.git"
+        "url": "git+https://github.com/arquisoft/wiq_es3b.git"
     },
     "author": "",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/arquisoft/wiq_0/issues"
+        "url": "https://github.com/arquisoft/wiq_es3b/issues"
     },
-    "homepage": "https://github.com/arquisoft/wiq_0#readme",
+    "homepage": "https://github.com/arquisoft/wiq_es3b#readme",
     "dependencies": {
         "axios": "^1.6.5",
         "cors": "^2.8.5",
