--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,13 +61,13 @@ services:
     image: ghcr.io/arquisoft/wiq_es3b/webapp:latest
     profiles: ["dev", "prod"]
     build: ./webapp
-    volumes:
-      - ./webapp:/app
-      - webapp_data:/app
     depends_on:
       - gatewayservice
     ports:
-      - "3000:3000" 
+      - "3000:3000"
+    #volumes:
+      #- ./webapp:/app
+    
 
   prometheus:
     image: prom/prometheus
@@ -105,7 +105,6 @@ services:
 
 volumes:
   mongodb_data:
-  webapp_data:
   prometheus_data: 
   grafana_data: 
 
