--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -3,8 +3,14 @@ FROM node:20
 COPY . /app
 WORKDIR /app
 
+# Copy package.json and package-lock.json to the working directory
+#COPY package*.json ./
+
 #Install the dependencies
 RUN npm install
+
+# Copy the app source code to the working directory
+#COPY . .
 
 ARG API_URI="http://localhost:8000"
 ENV REACT_APP_API_ENDPOINT=$API_URI
