--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
       - mongodb
       - userservice
       - authservice
+      - questionservice
     ports:
       - "8000:8000"
     networks:
@@ -69,6 +70,7 @@ services:
     environment:
       AUTH_SERVICE_URL: http://authservice:8002
       USER_SERVICE_URL: http://userservice:8001
+      QUESTIONS_SERVICE_URL: http://questionservice:8003
 
   webapp:
     container_name: webapp-${teamname:-defaultASW}
