--- a/questionservice/package.json
+++ b/questionservice/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/arquisoft/wiq_es3b/issues"
   },
-  "homepage": "https://github.com/arquisoft/wiq_es3b#readme"
+  "homepage": "https://github.com/arquisoft/wiq_es3b#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
+  }
 }
