--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,7 @@ services:
       USER_SERVICE_URL: http://userservice:8001
       QUESTION_GENERATION_SERVICE_URL: http://questiongenerationservice:8003
       QUESTIONS_SERVICE_URL: http://questionservice:8004
+      GAME_SERVICE_URL: http://gameservice:8005
 
   webapp:
     container_name: webapp-${teamname:-defaultASW}
