--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -114,7 +114,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
         registry: ghcr.io
-        workdir: questiongenerationservice
+        workdir: question_generator
 
   docker-push-questionservice:
     name: Push question service Docker Image to GitHub Packages
