--- a/gameservice/package.json
+++ b/gameservice/package.json
@@ -20,5 +20,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   }
 }
