--- a/gameservice/package.json
+++ b/gameservice/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "mongodb": "^6.3.0",
+    "mongodb-memory-server": "^9.1.6",
     "supertest": "^6.3.4"
   }
 }
