--- a/questionservice/package.json
+++ b/questionservice/package.json
@@ -20,5 +20,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongoose": "^8.2.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "mongodb": "^6.3.0",
+    "mongodb-memory-server": "^9.1.6",
+    "supertest": "^6.3.4"
   }
 }
