--- a/question_generator/package.json
+++ b/question_generator/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "i18n": "^0.15.1"
+    "i18n": "^0.15.1",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
