docker files updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "27017:27017"
     networks:
       - mynetwork
+    restart: always
 
   authservice:
     container_name: authservice-${teamname:-defaultASW}
@@ -24,6 +25,7 @@ services:
       - mynetwork
     environment:
       MONGODB_URI: mongodb://mongodb:27017/userdb
+    restart: always
 
   userservice:
     container_name: userservice-${teamname:-defaultASW}
@@ -38,6 +40,7 @@ services:
       - mynetwork
     environment:
       MONGODB_URI: mongodb://mongodb:27017/userdb
+    restart: always
 
   questiongenerationservice:
       container_name: questiongenerationservice-${teamname:-defaultASW}
@@ -50,6 +53,8 @@ services:
         - mynetwork
       environment:
         QUESTIONS_SERVICE_URL: http://questionservice:8004
+        AUTH_SERVICE_URL: http://authservice:8002
+      restart: always
   
   questionservice:
     container_name: questionservice-${teamname:-defaultASW}
@@ -64,6 +69,7 @@ services:
       - mynetwork
     environment:
       MONGODB_URI: mongodb://mongodb:27017/questionsdb
+    restart: always
 
   gameservice:
     container_name: gameservice-${teamname:-defaultASW}
@@ -78,6 +84,7 @@ services:
       - mynetwork
     environment:
       MONGODB_URI: mongodb://mongodb:27017/gamesdb
+    restart: always
 
   gatewayservice:
     container_name: gatewayservice-${teamname:-defaultASW}
@@ -101,6 +108,7 @@ services:
       QUESTION_GENERATION_SERVICE_URL: http://questiongenerationservice:8003
       QUESTIONS_SERVICE_URL: http://questionservice:8004
       GAME_SERVICE_URL: http://gameservice:8005
+    restart: always
 
   webapp:
     container_name: webapp-${teamname:-defaultASW}
@@ -113,6 +121,7 @@ services:
       - "3000:3000"
     environment:
       GATEWAY_SERVICE_URL: http://gatewayservice:8000
+    restart: always
     #volumes:
       #- ./webapp:/app
     
