--- a/gameservice/package.json
+++ b/gameservice/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/arquisoft/wiq_es3b#readme",
   "dependencies": {
+    "axios": "^1.6.8",
     "express": "^4.18.2",
     "mongoose": "^8.2.0"
   },
