--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -86,6 +86,21 @@ services:
       MONGODB_URI: mongodb://mongodb:27017/gamesdb
       USER_SERVICE_URL: http://userservice:8001
     restart: always
+  friendsservice:
+    container_name: friendsservice-${teamname:-defaultASW}
+    image: ghcr.io/arquisoft/wiq_es3b/friendsservice:latest
+    profiles: ["dev", "prod"]
+    build: ./users/friendsservice
+    depends_on:
+      - mongodb
+    ports:
+      - "8006:8006"
+    networks:
+      - mynetwork
+    environment:
+      MONGODB_URI: mongodb://mongodb:27017/friendsdb
+      USER_SERVICE_URL: http://userservice:8001
+    restart: always
 
   gatewayservice:
     container_name: gatewayservice-${teamname:-defaultASW}
@@ -109,6 +124,7 @@ services:
       QUESTION_GENERATION_SERVICE_URL: http://questiongenerationservice:8003
       QUESTIONS_SERVICE_URL: http://questionservice:8004
       GAME_SERVICE_URL: http://gameservice:8005
+      FRIENDS_SERVICE_URL: http://friendsservice:8006
     restart: always
 
   webapp:
