--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.6.5",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.6",
     "web-vitals": "^3.5.1"
   },
   "scripts": {
