--- a/webapp/package.json
+++ b/webapp/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.22.0",
+    "bcrypt": "^5.1.1",
     "expect-puppeteer": "^9.0.2",
     "jest": "^29.3.1",
     "jest-cucumber": "^3.0.1",
